--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,80 @@
-.App {
-  text-align: center;
+/* Style for the sidebar */
+
+.sidebar {
+  width: 170px;
+  height: 100vh;
+  position: fixed;
+  left: 0;
+  top: 0;
+  background-color: #ffffff;
+  padding: 15px;
+  box-shadow: 1px 0 1px rgba(0, 0, 0, 0.2);
+  transition: transform 0.3s ease-in-out;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.sidebar-hidden {
+  transform: translateX(-100%);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.sidebar ul {
+  list-style-type: none;
+  padding: 0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.sidebar ul li a {
+  color: rgb(0, 0, 0);
+  text-decoration: none;
+  display: block;
+  padding: 10px;
+}
+
+/* Style for the toggle button */
+.toggle-button {
+  position: fixed;
+  left: 10px;
+  top: 10px;
+  padding: 5px 10px;
+  background-color: rgb(255, 255, 255);
+  border: none;
+  cursor: pointer;
+  transition: left 0.3s ease-in-out;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  width: 40px;
+  height: 30px;
+  z-index: 50;
 }
 
-.App-link {
-  color: #61dafb;
+.toggle-button-sidebar-hidden {
+  left: 150px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.hamburger-line {
+  height: 2px;
+  width: 100%;
+  background-color: rgb(0, 0, 0);
+  margin: 4px 0;
+  transition: all 0.3s ease;
+}
+
+/* Transform hamburger into "<-" when sidebar is visible */
+.toggle-button-sidebar-hidden .hamburger-line:nth-child(1) {
+  transform: translateY(4px) translateX(-4px) rotate(-50deg);
+  width: 80%;
+}
+
+.toggle-button-sidebar-hidden .hamburger-line:nth-child(2) {
+}
+
+.toggle-button-sidebar-hidden .hamburger-line:nth-child(3) {
+  transform: translateY(-4px) translateX(-4px) rotate(50deg);
+  width: 80%;
+}
+.container {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 15px;
 }
